--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #ffffff;
+    background-image: url('kobietaSG.jpg');
 }
 
 #logo {
