--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,12 @@ nav ul li a {
     font-size: 2.5em;
 }
 
+#about {
+    background-image: url('kobietaSG.jpg'); /* Ścieżka do obrazu tła */
+    background-size: cover; /* Dopasowanie obrazu do rozmiaru sekcji */
+    background-position: center; /* Wyśrodkowanie obrazu */
+    background-repeat: no-repeat; /* Zapobieganie powtarzaniu obrazu */
+
 .cta-button {
     display: inline-block;
     margin-top: 20px;
@@ -50,7 +56,7 @@ nav ul li a {
     border-radius: 5px;
 }
 
-#about, #pricing {
+#pricing {
     padding: 60px 20px;
     text-align: center;
 }
