--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ nav ul li a {
 .cta-button {
     display: inline-block;
     padding: 15px 30px; /* Zwiększono odstępy wewnętrzne */
-    background-color: #ff9800;
+    background-color: #DAA520;
     color: white;
     text-decoration: none;
     border-radius: 5px;
