--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,13 @@ nav ul li a {
 #hero {
     position: relative;
     display: flex;
-    flex-direction: column; /* Ustawienie układu kolumnowego */
+    /*flex-direction: column; /* Ustawienie układu kolumnowego */
     /*justify-content: center; /* Wyśrodkowanie elementów w pionie */
     align-items: center;
     background-color: #fff;
     height: 60vh;
     padding: 0 20px;
-    /*text-align: center; /* Wyśrodkowanie tekstu wewnątrz hero-content */
+    text-align: center; /* Wyśrodkowanie tekstu wewnątrz hero-content */
 }
 
 .hero-content {
