--- a/styles.css
+++ b/styles.css
@@ -135,14 +135,15 @@ footer {
 }
 
 .course-description {
-    font-size: 1em;
+    font-size: 1.125em;
     color: #000;
-    margin-bottom: 40px;
+    margin-bottom: 400px;
+    line-height: 1.6em; /* Odstępy między wierszami */
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    font-weight: bold;
+    font-weight: 400;
 }
 
 .cta-button {
