--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,7 @@ footer {
     margin-right: auto;
     text-align: center;
     font-weight: 400;
+    line-height: 1.6em; /* Odstępy między wierszami */
 }
 
 .cta-button {
