--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,8 @@ footer {
     font-size: 1.2em;
     font-weight: bold;
     transition: transform 0.3s ease;
-    margin-top: 10px; /* Dodanie odstępu powyżej przycisku */
+    margin-top: 0; /* Usuń margines górny */
+    margin-bottom: 0; /* Usuń margines dolny */
 }
 
 .cta-button:hover {
