--- a/styles.css
+++ b/styles.css
@@ -274,14 +274,15 @@ footer {
     cursor: pointer;
     font-size: 20px;
     font-weight: bold;
+    z-index: 1; /* Ustaw, aby przyciski były nad sliderem */
 }
 
 .prev {
-    left: 0;
+    left: 10px;
 }
 
 .next {
-    right: 0;
+    right: 10px;
 }
 
 @media (max-width: 768px) {
