--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,7 @@ footer {
 .testimonial-container {
     display: flex;
     transition: transform 0.5s ease-in-out;
-    width: calc(100% * 3); /* Ustaw szerokość na podstawie liczby opinii */
+    width: 100%; /* Szerokość kontenera dopasowana do jego rodzica */
 }
 
 .testimonial {
