--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,9 @@ footer {
 #testimonials {
     text-align: center;
     padding: 50px;
+    font-weight: bold; 
+    font-size: 1.2em;
+
 }
 
 .testimonial-slider {
