--- a/styles.css
+++ b/styles.css
@@ -359,7 +359,7 @@ footer {
 
 #angielski-section {
     padding: 50px;
-    background-color: #f9f9f9;
+    background-color: #F0F0F0;
     text-align: center;
     min-height: 300px; /* Można ustawić minimalną wysokość sekcji */
 }
