--- a/styles.css
+++ b/styles.css
@@ -389,14 +389,14 @@ body {
 .box {
     padding: 20px;
     margin: 10px;
-    background-color: #ffffff;
+    background-color: #DAA520;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .plan-title h3 {
     font-size: 1.5em;
-    color: #0071BC;
+    color: #000;
 }
 
 .plan-price .price {
