--- a/styles.css
+++ b/styles.css
@@ -380,7 +380,7 @@ body {
 
 .plan {
     background-color: #DAA520;
-    border: 2px solid #F1F1F1;
+    border: 2px solid #000;
     border-radius: 10px;
     width: 300px;
     text-align: center;
