--- a/styles.css
+++ b/styles.css
@@ -132,13 +132,13 @@ footer {
 /* Kluczowe klatki animacji */
 @keyframes breathing {
     0% {
-        transform: scale(1); /* Początkowy rozmiar */
+        transform: scale(0); /* Początkowy rozmiar */
     }
     50% {
-        transform: scale(1.1); /* Skalowanie przycisku do 110% */
+        transform: scale(0.1); /* Skalowanie przycisku do 110% */
     }
     100% {
-        transform: scale(1); /* Powrót do początkowego rozmiaru */
+        transform: scale(0; /* Powrót do początkowego rozmiaru */
     }
 }
 }
