--- a/styles.css
+++ b/styles.css
@@ -341,7 +341,7 @@ footer {
     font-size: 0.9em;
     line-height: 1.6em;
     margin: 5px 0;
-    color: #cccccc;
+    color: #ffffff;
 }
 
 .footer-column ul {
