--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ nav ul li a {
 
 .hero-image img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
     position: absolute;
     top: 0;
