--- a/styles.css
+++ b/styles.css
@@ -394,8 +394,9 @@ body {
     align-items: center; /* Wyśrodkowanie w pionie */
     padding: 50px 20px;
     background-color: #F0F0F0;
-    min-height: 100vh; /* Zapewnienie, że sekcja zajmuje co najmniej 100% wysokości ekranu */
-    flex-wrap: wrap; /* Pozwala na lepsze dopasowanie przy mniejszych ekranach */
+    min-height: 100vh; /* Sekcja zajmuje co najmniej 100% wysokości ekranu */
+    flex-wrap: wrap; /* Pozwala na przeniesienie do nowego wiersza na mniejszych ekranach */
+    gap: 40px; /* Dodanie odstępu między planami */
 }
 
 .plan {
@@ -404,7 +405,8 @@ body {
     border-radius: 10px;
     width: 300px;
     text-align: center;
-    margin: 20px; /* Dodanie marginesów dookoła każdego planu */
+    padding: 20px;
+    margin: 20px 40px; /* Zwiększenie odstępu między planami */
 }
 
 .box {
@@ -463,15 +465,15 @@ body {
 
 @media (max-width: 768px) {
     #pricing-plans {
-        flex-direction: column; /* Plany w kolumnie na małych ekranach */
+        flex-direction: column; /* Plany w kolumnie na mniejszych ekranach */
         align-items: center;
+        gap: 20px; /* Zmniejszenie odstępów między planami na mniejszych ekranach */
     }
 
     .plan {
         width: 90%; /* Szerokość planów dostosowana do urządzeń mobilnych */
     }
 }
-
 
 .contact-container {
     max-width: 1000px;
