--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,7 @@ body {
     background-color: #F0F0F0;
     min-height: 100vh; /* Zapewnienie, że sekcja zajmuje co najmniej 100% wysokości ekranu */
     flex-wrap: wrap; /* Pozwala na lepsze dopasowanie przy mniejszych ekranach */
-    gap: 20px; /* Zmniejszony odstęp między planami */
+    gap: 30px; /* Ustawienie średniego odstępu między planami */
 }
 
 .plan {
@@ -471,7 +471,6 @@ body {
         width: 90%; /* Szerokość planów dostosowana do urządzeń mobilnych */
     }
 }
-
 
 .contact-container {
     max-width: 1000px;
