--- a/styles.css
+++ b/styles.css
@@ -559,3 +559,11 @@ body {
     margin-top: 30px;            /* Przestrzeń nad nagłówkiem */
     margin-bottom: 40px;         /* Przestrzeń pod nagłówkiem */
 }
+
+.subtitle {
+    font-size: 1.5em; /* Dostosuj rozmiar czcionki */
+    color: #333; /* Dostosuj kolor */
+    margin-top: 10px; /* Przestrzeń nad podtytułem */
+    margin-bottom: 30px; /* Przestrzeń pod podtytułem */
+    text-align: center; /* Wyśrodkowanie */
+}
