--- a/styles.css
+++ b/styles.css
@@ -193,8 +193,8 @@ footer {
 }
 
 .features-container {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 kolumny */
     gap: 50px;
 }
 
