--- a/styles.css
+++ b/styles.css
@@ -195,14 +195,15 @@ footer {
 .features-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3 kolumny */
-    gap: 50px;
-    text-align: center;
+    gap: 20px; /* odstęp między elementami */
 }
 
 .feature {
-    max-width: 300px;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
     text-align: center;
-}
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 
 .feature h3 {
     font-size: 1.5em;
@@ -216,19 +217,6 @@ footer {
     color: #000;
     line-height: 1.6em;
     text-align: center;
-}
-
-.features-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 kolumny */
-    text-align: center;
-    gap: 50px;
-}
-
-.feature {
-    max-width: 300px;
-    text-align: center;
-    flex-basis: 100%;
 }
 
 @media (min-width: 768px) {
